Changelog
=========

1.0rc2 - unreleased
------------------

* Corrected IZCatalog import location to point to the interfaces module.
  [hannosch]


1.0rc1 - 2009-03-26
------------------

* Updated the interface to match the developments of similar functionality
  on CMF trunk. This means that indexers are now multi-adapters on
  (object, catalog), and the keyword arguments (including the implicit 
  'portal' parameter) are gone.
  [optilude]


1.0a1 - 2009-03-05
------------------

* Initial release
